# so-challenge

./: .gitignore  README.md  pyproject.toml
diary/: 001-project-setup.md  002-requirements-spec.md  003-tdd-data-fetcher-tests.md  004-implement-data-fetcher.md  005-tdd-plotter-tests.md  006-implement-plotter.md  007-tdd-milestones-tests.md  008-implement-milestones.md  009-implement-main.md  010-fix-plotter-dates.md
docs/: requirements.md
src/so_challenge/: __init__.py  data_fetcher.py  main.py  milestones.py  plotter.py
tests/: test_data_fetcher.py  test_milestones.py  test_plotter.py
