[project]
name = "so-challenge"
version = "0.1.0"
description = "Stack Overflow data collection and visualization project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "matplotlib",
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/so_challenge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
